@@ -1,3 +1,7 @@
+2012-05-11
+ * isExposing returns -2 on exposure ends
+ * removed camWaitExposure
+
 2012-05-09
  * improves multiple channel WCS headers writing
 
